<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <!-- Header -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreySoft3"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/values_regular_"
                    android:paddingTop="@dimen/values_medium2"
                    android:paddingRight="@dimen/values_regular_"
                    android:paddingBottom="@dimen/values_medium2"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/iv_preview"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_marginTop="@dimen/values_regular"
                        android:background="@drawable/border_img_stories"
                        android:padding="@dimen/values_small"
                        android:scaleType="centerCrop"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/values_small"
                        android:fontFamily="@font/overpass_regular"
                        android:text="@string/tv_label_sample_1"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/font_medium"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/overpass_regular"
                            android:gravity="center_vertical"
                            android:text="@string/tv_label_sample_2"
                            android:textColor="@color/colorWhite_90"
                            android:textSize="@dimen/font_regular" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/values_small"
                            app:srcCompat="@drawable/ic_action_arrow_down" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/values_small"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_followers_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/overpass_bold"
                            android:paddingRight="@dimen/values_small"
                            android:text="@string/tv_label_sample_3"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/font_regular" />

                        <TextView
                            android:id="@+id/tv_followeres_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/overpass_bold"
                            android:paddingRight="@dimen/values_small"
                            android:text="@string/tv_label_sample_4"
                            android:textColor="@color/colorWhite_75"
                            android:textSize="@dimen/font_regular_medium" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/overpass_bold"
                            android:paddingRight="@dimen/values_small"
                            android:text="|"
                            android:textColor="@color/colorWhite_75"
                            android:textSize="@dimen/font_regular" />

                        <TextView
                            android:id="@+id/tv_following_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/overpass_bold"
                            android:paddingRight="@dimen/values_small"
                            android:text="@string/tv_label_sample_5"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/font_regular" />

                        <TextView
                            android:id="@+id/tv_following_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/overpass_bold"
                            android:paddingRight="@dimen/values_small"
                            android:text="@string/tv_label_sample_6"
                            android:textColor="@color/colorWhite_75"
                            android:textSize="@dimen/font_regular_medium" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/values_regular_"
                        android:background="@drawable/rect_bg"
                        android:backgroundTint="@color/colorPrimary"
                        android:minHeight="0dp"
                        android:paddingLeft="@dimen/values_medium2"
                        android:paddingTop="@dimen/values_regular"
                        android:paddingRight="@dimen/values_medium2"
                        android:paddingBottom="@dimen/values_regular"
                        android:text="@string/btn_label_status"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/font_regular_small"
                        android:textStyle="bold" />
                </LinearLayout>
                <!-- END Header -->

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:tooltipText="@string/app_name"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGrey"
                    app:tabBackground="@color/colorGrey"
                    app:tabIndicatorColor="@color/colorPrimary"
                    app:tabInlineLabel="true"
                    app:tabSelectedTextColor="@color/colorPrimary"
                    app:tabTextAppearance="@style/ActionBar.TitleTextStyle"
                    app:tabTextColor="@color/colorTextGrey">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tabitem_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:icon="@drawable/ic_action_cart"
                        android:text="@string/tab_title_0" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/tabitem_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:icon="@drawable/ic_menu_add"
                        android:text="@string/tab_title_0" />
                </com.google.android.material.tabs.TabLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

